--- a/index.html
+++ b/index.html
@@ -93,8 +93,11 @@
 									<h1 class="font-body">DROIDS / maxDemon<br>Software for comparative protein dynamics</h1>
 								</div>
 								<a href="#" data-scrollto="#section-nextgen" data-easing="easeInOutExpo" data-speed="1250" data-offset="160" class="button button-large button-white button-light capitalize" style="border-radius: 23px;">Free Download</a>
-								<a href="demos/app-landing/images/videos/DROIDS_3.mp4" class="hero-action-link" data-lightbox="iframe"><i class="icon-play-sign"></i> Watch the Video</a>
-							  </div>
+								<!--a href="demos/app-landing/images/videos/DROIDS_3.mp4" class="hero-action-link" data-lightbox="iframe"><i class="icon-play-sign"></i> Watch the Video</a> -->
+							  <!--iframe src="https://www.youtube.com/embed/KMZgqWO1v70" class="hero-action-link" data-lightbox="iframe"><i class="icon-play-sign"></i> Watch the Video</iframe> -->
+							   <a href="#lightbox" class="lightbox-toggle button button-large button-white button-light capitalize"   data-lightbox-type="video"   data-lightbox-content="https://www.youtube.com/embed/KMZgqWO1v70" style="border-radius: 23px;">  Play Video</a>
+						
+							</div>
 						</div>
 					</div>
 				</div>
