--- a/index.html
+++ b/index.html
@@ -93,11 +93,8 @@
 									<h1 class="font-body">DROIDS / maxDemon<br>Software for comparative protein dynamics</h1>
 								</div>
 								<a href="#" data-scrollto="#section-nextgen" data-easing="easeInOutExpo" data-speed="1250" data-offset="160" class="button button-large button-white button-light capitalize" style="border-radius: 23px;">Free Download</a>
-								<!--a href="demos/app-landing/images/videos/DROIDS_3.mp4" class="hero-action-link" data-lightbox="iframe"><i class="icon-play-sign"></i> Watch the Video</a> -->
-							  <!--iframe src="https://www.youtube.com/embed/KMZgqWO1v70" class="hero-action-link" data-lightbox="iframe"><i class="icon-play-sign"></i> Watch the Video</iframe> -->
-							   <a href="#lightbox" class="lightbox-toggle button button-large button-white button-light capitalize"   data-lightbox-type="video"   data-lightbox-content="https://www.youtube.com/embed/KMZgqWO1v70" style="border-radius: 23px;">  Play Video</a>
-						
-							</div>
+								<a href="demos/app-landing/images/videos/DROIDS_3.mp4" class="hero-action-link" data-lightbox="iframe"><i class="icon-play-sign"></i> Watch the Video</a>
+							  </div>
 						</div>
 					</div>
 				</div>
@@ -157,8 +154,8 @@
 									<h2 style="font-size: 32px;" class="font-body ls1 t400">DROIDS 4.0 + maxDemon 2.0</h2>
 								</div>
 								<p style="color: #777;" class="lead">Linux software pipeline for machine learning assisted MD ensemble analysis for comparative protein dynamics</p>
-								<a href="demos/app-landing/download/DROIDS-4.3.tar.gz" class="section-more-link">DOWNLOAD .tar.gz <i class="icon-angle-right"></i></a>
-							    <a href="demos/app-landing/download/DROIDS-4.3.zip" class="section-more-link">DOWNLOAD .zip <i class="icon-angle-right"></i></a>
+								<a href="demos/app-landing/download/DROIDS-4.0.tar.gz" class="section-more-link">DOWNLOAD .tar.gz <i class="icon-angle-right"></i></a>
+							    <a href="demos/app-landing/download/DROIDS-4.0.zip" class="section-more-link">DOWNLOAD .zip <i class="icon-angle-right"></i></a>
                                 <a href="demos/app-landing/download/AMBER_installer.zip" class="section-more-link">AMBER INSTALLER .zip<i class="icon-angle-right"></i></a>
 								<a href="demos/app-landing/download/DROIDS_installer.zip" class="section-more-link">DROIDS INSTALLER .zip<i class="icon-angle-right"></i></a>
 							</div>
@@ -295,12 +292,15 @@
 						<a href="demos/app-landing/download/citation1.pdf" class="button button-circle capitalize">first citation - Biophysical Journal</a>
                         <a href="demos/app-landing/download/citation2.pdf" class="button button-circle capitalize">second citation - Biophysical Journal</a>
 					    <a href="demos/app-landing/download/citation3.pdf" class="button button-circle capitalize">third citation - bioRxiv preprint</a>
-					<h3 class="ls1 t400" style="font-size: 32px; margin-bottom: 10px;">published example from our lab</h3>
-						<p class="lead divcenter" style="max-width: 600px">Gregory A. Babbitt , Miranda L. Lynch , Matthew McCoy , Ernest P. Fokoue
-                                                                           & André O. Hudson (2020): Function and evolution of B-Raf loop dynamics relevant to cancer
+					<h3 class="ls1 t400" style="font-size: 32px; margin-bottom: 10px;">published examples from our lab</h3>
+						<p class="lead divcenter" style="max-width: 600px">Function and evolution of B-Raf loop dynamics relevant to cancer
                                                                            recurrence under drug inhibition, Journal of Biomolecular Structure and Dynamics, DOI:
                                                                            10.1080/07391102.2020.1815578</p>
-						<a href="demos/app-landing/download/citation4.pdf" class="button button-circle capitalize">PDF - JBSD</a>
+						<a href="demos/app-landing/download/citation4.pdf" class="button button-circle capitalize">PDF</a>
+						<p class="lead divcenter" style="max-width: 600px">Functional binding dynamics relevant to the evolution of zoonotic spillovers in endemic
+                                                    						and emergent Betacoronavirus strains. , Journal of Biomolecular Structure and Dynamics, DOI:
+                                                                           10.1080/07391102.2021.1953604</p>
+						<a href="demos/app-landing/download/citation5.pdf" class="button button-circle capitalize">PDF</a>
 					</div>
 
 					
@@ -365,7 +365,7 @@
 								<i class="i-plain i-large icon-et-cloud inline-block" style="margin-bottom: 30px; color: #999;"></i>
 								<div class="heading-block nobottomborder" style="margin-bottom: 15px;">
 									<h4 style="font-size: 16px;">DROIDS 3.0 and maxDemon 1.0 source code</h4>
-									<a href="https://github.com/gbabbitt/DROIDS-4.0-comparative-protein-dynamics" class="button button-circle capitalize">GitHub repo</a>	
+									<a href="https://github.com/gbabbitt/DROIDS-3.0-comparative-protein-dynamics" class="button button-circle capitalize">GitHub repo</a>	
 										</div>
 								</div>
 
