--- a/index.html
+++ b/index.html
@@ -296,10 +296,12 @@
 						<p class="lead divcenter" style="max-width: 600px">Function and evolution of B-Raf loop dynamics relevant to cancer
                                                                            recurrence under drug inhibition, Journal of Biomolecular Structure and Dynamics, DOI:
                                                                            10.1080/07391102.2020.1815578</p>
+						<a href="https://pubmed.ncbi.nlm.nih.gov/32897175/" class="button button-circle capitalize">Online Link</a>										   
 						<a href="demos/app-landing/download/citation4.pdf" class="button button-circle capitalize">PDF</a>
 						<p class="lead divcenter" style="max-width: 600px">Functional binding dynamics relevant to the evolution of zoonotic spillovers in endemic
                                                     						and emergent Betacoronavirus strains. , Journal of Biomolecular Structure and Dynamics, DOI:
                                                                            10.1080/07391102.2021.1953604</p>
+						<a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7836108/" class="button button-circle capitalize">Online Link</a>												   
 						<a href="demos/app-landing/download/citation5.pdf" class="button button-circle capitalize">PDF</a>
 					</div>
 
