--- a/index.html
+++ b/index.html
@@ -289,19 +289,19 @@
 						<h3 class="ls1 t400" style="font-size: 32px; margin-bottom: 10px;">If you publish your results...</h3>
 						<p class="lead divcenter" style="max-width: 600px">To cite DROIDS and maxDemon, please see the links below</p>
 						<a href="demos/app-landing/download/citation1.pdf" class="button button-circle capitalize">first citation - Biophysical Journal</a>
-                                                <a href="demos/app-landing/download/citation2.pdf" class="button button-circle capitalize">second citation - Biophysical Journal</a>
+                        <a href="demos/app-landing/download/citation2.pdf" class="button button-circle capitalize">second citation - Biophysical Journal</a>
 					    
 					<h3 class="ls1 t400" style="font-size: 32px; margin-bottom: 10px;">published examples from our lab</h3>
 						<p class="lead divcenter" style="max-width: 600px">Function and evolution of B-Raf loop dynamics relevant to cancer
                                                                            recurrence under drug inhibition, Journal of Biomolecular Structure and Dynamics, DOI:
                                                                            10.1080/07391102.2020.1815578</p>
-						<a href="https://pubmed.ncbi.nlm.nih.gov/32897175/" class="button button-circle capitalize">Online Link</a>										   
+						<a href="https://www.tandfonline.com/doi/abs/10.1080/07391102.2020.1815578" class="button button-circle capitalize">Online Link</a>										   
 						<a href="demos/app-landing/download/citation4alt.pdf" class="button button-circle capitalize">PDF</a>
 						<p class="lead divcenter" style="max-width: 600px">Functional binding dynamics relevant to the evolution of zoonotic spillovers in endemic
                                                     						and emergent Betacoronavirus strains. , Journal of Biomolecular Structure and Dynamics, DOI:
                                                                            10.1080/07391102.2021.1953604</p>
-						<a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7836108/" class="button button-circle capitalize">Online Link</a>												   
-						<a href="demos/app-landing/download/citation5.pdf" class="button button-circle capitalize">PDF</a>
+						<a href="https://www.tandfonline.com/doi/full/10.1080/07391102.2021.1953604" class="button button-circle capitalize">Online Link</a>												   
+						<a href="demos/app-landing/download/citation5alt.pdf" class="button button-circle capitalize">PDF</a>
 					</div>
 
 					
