--- a/index.html
+++ b/index.html
@@ -150,11 +150,11 @@
 								<div class="topmargin-lg d-none d-lg-block"></div>
 								<div class="emphasis-title bottommargin-sm">
 									<span class="before-heading">Software download</span>
-									<h2 style="font-size: 32px;" class="font-body ls1 t400">DROIDS 4.4 + maxDemon 2.0</h2>
+									<h2 style="font-size: 32px;" class="font-body ls1 t400">DROIDS 4.0 + maxDemon 2.0</h2>
 								</div>
 								<p style="color: #777;" class="lead">Linux software pipeline for machine learning assisted MD ensemble analysis for comparative protein dynamics</p>
-								<a href="demos/app-landing/download/DROIDS-4.4.tar.gz" class="section-more-link">DOWNLOAD .tar.gz <i class="icon-angle-right"></i></a>
-							    <a href="demos/app-landing/download/DROIDS-4.4.zip" class="section-more-link">DOWNLOAD .zip <i class="icon-angle-right"></i></a>
+								<a href="demos/app-landing/download/DROIDS-4.0.tar.gz" class="section-more-link">DOWNLOAD .tar.gz <i class="icon-angle-right"></i></a>
+							    <a href="demos/app-landing/download/DROIDS-4.0.zip" class="section-more-link">DOWNLOAD .zip <i class="icon-angle-right"></i></a>
                                 <a href="demos/app-landing/download/AMBER_installer.zip" class="section-more-link">AMBER INSTALLER .zip<i class="icon-angle-right"></i></a>
 								<a href="demos/app-landing/download/DROIDS_installer.zip" class="section-more-link">DROIDS INSTALLER .zip<i class="icon-angle-right"></i></a>
 							</div>
@@ -290,7 +290,8 @@
 						<p class="lead divcenter" style="max-width: 600px">To cite DROIDS and maxDemon, please see the links below</p>
 						<a href="demos/app-landing/download/citation1.pdf" class="button button-circle capitalize">first citation - Biophysical Journal</a>
                         <a href="demos/app-landing/download/citation2.pdf" class="button button-circle capitalize">second citation - Biophysical Journal</a>
-					    
+					    <a href="demos/app-landing/download/citation3.pdf" class="button button-circle capitalize">third citation - STAR Protocols</a>
+						
 					<h3 class="ls1 t400" style="font-size: 32px; margin-bottom: 10px;">published examples from our lab</h3>
 						<p class="lead divcenter" style="max-width: 600px">Function and evolution of B-Raf loop dynamics relevant to cancer
                                                                            recurrence under drug inhibition, Journal of Biomolecular Structure and Dynamics, DOI:
@@ -365,8 +366,8 @@
 							<div class="col-lg-4 bottommargin">
 								<i class="i-plain i-large icon-et-cloud inline-block" style="margin-bottom: 30px; color: #999;"></i>
 								<div class="heading-block nobottomborder" style="margin-bottom: 15px;">
-									<h4 style="font-size: 16px;">DROIDS 4.0 and maxDemon 2.0 source code</h4>
-									<a href="https://github.com/gbabbitt/DROIDS-4.0-comparative-protein-dynamics" class="button button-circle capitalize">GitHub repo</a>	
+									<h4 style="font-size: 16px;">DROIDS 3.0 and maxDemon 1.0 source code</h4>
+									<a href="https://github.com/gbabbitt/DROIDS-3.0-comparative-protein-dynamics" class="button button-circle capitalize">GitHub repo</a>	
 										</div>
 								</div>
 
